# PageManager

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/include/: define.h  fifo_replacer.h  lru_replacer.h  opt_replacer.h  replacer.h
src/replacer/: fifo_replacer.cpp  lru_replacer.cpp  opt_replacer.cpp  replacer.cpp
